fix: remove name from icon, use tooltip instead (some names are too long)

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -1,7 +1,7 @@
 // app global css in Sass form
 .icon-box
   border-radius: 4px
-  max-width: 140px
+  max-width: 80px
   width: 100%
   height: 60px
   cursor: pointer
@@ -12,7 +12,7 @@
   border: 1px solid #cacaca
   margin: 2px
   border-radius: 4px
-  max-width: 140px
+  max-width: 80px
   width: 100%
   height: 60px
 
